# vibereview

./: Cargo.toml  README.md  TODO  TODO.md  build.rs  package-lock.json
.github/scripts/: package_deb.sh  update_homebrew_formula.py
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: auth.rs  claude.rs  codex.rs  main.rs  models.rs  share.rs
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
