[package]
name = "promptui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
similar = "2.7"
zstd = "0.13"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
arboard = "3.4"
chrono = "0.4"
pulldown-cmark = "0.12"
