[package]
name = "vibereview"
version = "0.2.0"
edition = "2021"
description = "TUI for viewing Claude Code and Codex CLI sessions"
license = "MIT"
repository = "https://github.com/daulet/vibereview"
authors = ["daulet"]
keywords = ["claude", "codex", "tui", "cli", "sessions"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
similar = "2.7"
zstd = "0.13"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
arboard = "3.4"
chrono = "0.4"
pulldown-cmark = "0.12"
base64 = "0.22"
